[package]
name = "rust_linux_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ls"
path = "commands/ls/src/main.rs"

[[bin]]
name = "cat"
path = "commands/cat/src/main.rs"

[[bin]]
name = "simple_config"
path = "macro/simple_config/src/main.rs"

[[bin]]
name = "unit_parser"
path = "macro/unit_parser/src/main.rs"

[workspace]
members = [
    "commands/ls",
    "commands/cat",
    "macro/simple_config",
    "macro/unit_parser",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ls = { path = "commands/ls" }
cat = { path = "commands/cat" }
simple_config = { path = "macro/simple_config" }
unit_parser = { path = "macro/unit_parser" }
clap = "3.2.22"
nom = "7.1.1"
chrono = "0.4.19"
colored = "2.0"
quote = "1.0"
syn = "2.0"
ini = "1.3.0"
serde = { version = "1.0", features = ["derive"] }