[package]
name = "rust_linux_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ls"
path = "commands/ls/src/main.rs"

[[bin]]
name = "cat"
path = "commands/cat/src/main.rs"

[[bin]]
name = "simple_config"
path = "macro/simple_config/src/main.rs"

[[bin]]
name = "unit_parser"
path = "macro/unit_parser/src/main.rs"

[[bin]]
name = "basic"
path = "confique_demo/basic/src/main.rs"

[[bin]]
name = "service_section"
path = "confique_demo/service_section/src/main.rs"

[[bin]]
name = "ps"
path = "commands/ps/src/main.rs"

[[bin]]
name = "cmatrix"
path = "commands/cmatrix/src/main.rs"

[workspace]
members = [
    "commands/*",
    "macro/*",
    "confique_demo/*",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic commands
ls = { path = "commands/ls" }
cat = { path = "commands/cat" }
ps = { path = "commands/ps" }

# some fun commands
cmatrix = { path = "commands/cmatrix" }

# macro
simple_config = { path = "macro/simple_config" }
unit_parser = { path = "macro/unit_parser" }

# confique_demo
basic = { path = "confique_demo/basic" }
service_section = { path = "confique_demo/service_section" }

# dependencies
clap = "3.2.22"
nom = "7.1.1"
chrono = "0.4.19"
colored = "2.0"
quote = "1.0"
syn = "2.0"
ini = "1.3.0"
confique = "0.2"
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3", features = ["consoleapi", "winbase", "wincon", "winnt", "winuser"] }
sysinfo = "0.26.4"
crossterm = "0.25.0"
rand = "0.8.4"
ctrlc = "3.1.7"